Fixed nav alignment and changed footer alignment
Accidentally center aligned the nav - should've been the footer! Made the footer links inline horizontally (I hope)...

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -185,7 +185,7 @@ li {
 
 .nav-li {
 	list-style: none;
-	text-align: center;
+	text-align: right;
 }
 
 .nav-li a {
@@ -203,7 +203,10 @@ li {
 }
 
 .footer li {
-	list-style: none;;
+	list-style: none;
+	text-align: center;
+	display: inline-block;
+	margin: 0 auto;
 }
 
 .footer a {
